--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
+h1,ul,p{
+    margin: 0px;
+
+}
 ul {
   margin: 0px;
   padding: 0px;
@@ -9,6 +13,10 @@ ul {
 }
 a {
   text-decoration: none;
+}
+img{
+    max-width: 100%;
+    display: block;
 }
 .header-bg {
   background-color: #000;
@@ -80,4 +88,11 @@ position: absolute;
        
 
     }
+}
+.introducao-bg {
+    background: #0C0B0A;
+    color: #fff;
+}
+.introducao {
+    
 }
