--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto,Arial, Helvetica, sans-serif;
   background: #000;
 }
 h1,
@@ -66,6 +66,7 @@ img {
 @media (max-width: 800px) {
   .header-menu {
     gap: 20px;
+    margin-left: 50px;
   }
   .header-menu a {
     padding: 12px 16px;
@@ -121,6 +122,10 @@ h2 {
 .habilidades {
   background: #000;
 }
-.menu {
-  width: 90%;
+.vetor{
+  margin-bottom: -39px;
+
+}
+.footer-bg {
+  color: white;
 }
